# nntrainer

./: .gitignore  check_raw_embeddings.py  meson.build  test_gdn_kernels.cpp
Applications/: meson.build
Applications/CausalLM/: README.md  build_android.sh  chat_template.cpp  chat_template.h  debug_embedding.py  install_android.sh  llm_util.cpp  llm_util.hpp  main.cpp  meson.build  nntr_runner.cpp  quantize.cpp  repeat_perf.py  repeat_perf_test.py  safetensors_info.cpp  test_pooling.cpp  tokenizers_cpp.h
Applications/CausalLM/api/: README.md  causal_lm_api.cpp  causal_lm_api.h  quick_dot_ai_api.cpp  quick_dot_ai_api.h  test_api.cpp
Applications/CausalLM/jni/: Android.mk
Applications/CausalLM/layers/: attn_gate.cpp  attn_gate.h  causal_conv1d.cpp  causal_conv1d.h  causal_conv1d_layer.cpp  causal_conv1d_layer.h  custom_gru_layer.cpp  custom_gru_layer.h  custom_multiply.cpp  custom_multiply.h  custom_slice.cpp  custom_slice.h  deberta_attention_layer.cpp  deberta_attention_layer.h  embedding_layer.cpp  embedding_normalize_layer.cpp  embedding_pooling_layer.cpp  gate_up_layer.cpp  gate_up_layer.h  gated_delta_net.cpp  gated_delta_net.h  gather_layer.cpp  gather_layer.h  gdn_ssm_core.cpp  gdn_ssm_core.h  lfm2_conv.cpp  lfm2_conv.h  meson.build  mha_core.cpp  mha_core.h  rms_norm.cpp  shared_fully_connected_layer.cpp  shared_fully_connected_layer.h  tie_word_embedding.cpp  transpose_layer.cpp  transpose_layer.h
Applications/CausalLM/models/: causal_lm.cpp  causal_lm.h  embedding.cpp  embedding.h  meson.build  sentence_transformer.cpp  sentence_transformer.h  transformer.cpp  transformer.h
Applications/MyApp/jni/: main.cpp  meson.build
Applications/TorchFXConverter/: README.md  converter.py  importer.py  nntrainer_layers.py
Applications/TorchFXConverter/jni/: meson.build  nntr_runner.cpp
Applications/TorchFXConverter/tests/: test_build_and_run.py
Applications/TorchFXRunner/jni/: meson.build  nntr_runner.cpp
api/ccapi/include/: layer.h  model.h
api/ccapi/src/: tensor_api_graph.cpp
nntrainer/: app_context.cpp
nntrainer/graph/: network_graph.cpp
nntrainer/layers/: common_properties.h  concat_layer.cpp  concat_layer.h  conv_transpose1d_layer.h  conv_trasnpose1d_layer.cpp  depthwise_conv1d_layer.cpp  depthwise_conv1d_layer.h  fc_layer.cpp  input_layer.cpp  layer_devel.h  layer_node.cpp  layer_node.h  layer_normalization_layer.cpp  weight_layer.cpp  weight_layer.h
nntrainer/models/: neuralnet.cpp  neuralnet.h
nntrainer/tensor/: float_tensor.cpp  q6_k_tensor.cpp  tensor.cpp
nntrainer/tensor/cpu_backend/: cpu_backend.h
nntrainer/utils/: completion_token.h  meson.build  safetensors_util.cpp  safetensors_util.h  thread_manager.cpp  thread_manager.h
test/input_gen/: gen_depthwise_conv1d_golden.py  gen_layer_tests.py  recorder.py
test/unittest/: meson.build  unittest_nntrainer_cpu_backend.cpp  unittest_nntrainer_cpu_backend_fp16.cpp  unittest_safetensors_quantize.cpp  unittest_thread_manager.cpp
tools/: meson.build
tools/TorchFXConverter/: README.md  converter.py
tools/TorchFXConverter/emitter_ini/: __init__.py  structured.py
tools/causal_lm_converter/: README.md  meson.build
tools/causal_lm_converter/nntr_causal_lm_converter/: __init__.py  __main__.py  cli.py  ini.py  inspect.py  run.py  runtime_config.py  tokenize.py  weights.py
tools/causal_lm_converter/nntr_causal_lm_converter/architectures/: __init__.py  base.py  qwen3.py
tools/causal_lm_converter/runner/: causal_lm_importer.cpp  causal_lm_importer.h  example_embedded.cpp  meson.build  runner.cpp
tools/causal_lm_converter/tests/: conftest.py  test_build_and_run.py  test_ini_emit.py  test_inspect.py  test_run_driver.py  test_runtime_config.py  test_weight_mapping.py
(+82 files in other folders)
